test/captureIndexReplacementClassical7_2.slq
// args: --run

def main(){
	x:=(1,);
	def foo(){
		x[0]:=X(x[0]);
		return x;
	}
	return x; /// error
}
